// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="entry-list-item hot"
  id="good-karmaawesome-hive"
>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="good-karma-awesome-hive"
      >
        <div
          className="d-flex align-items-center"
          id="good-karma-awesome-hive"
        >
          <a
            href="/@good-karma"
            onClick={[Function]}
          >
            <span
              className="author-avatar d-block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate d-flex d-sm-none align-items-center"
            id="good-karma-awesome-hive"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              good-karma
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="good-karma-awesome-hive"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate d-none d-sm-flex align-items-center position-relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                good-karma
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/hot/hive"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        hive
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Monday, June 1, 2020 5:53 AM"
      >
        5d
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image "
    >
      <a
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <picture>
          <source
            media="(min-width: 576px)"
            srcSet="https://images.ecency.com/p/HNWT6DgoBc1692QWn5trsGLxi44TrGuNZJMEdibBBbUKuho3EaW43JV4QzaQ258PEGNV2u43KAhU8r3Vjno4cBP8JeTFkbS2SCMjZZPprKzfMSdteRxSZxuPku4.png?format=match&mode=fit&width=260&height=200"
          />
          <img
            alt="Awesome Hive"
            onError={[Function]}
            srcSet="https://images.ecency.com/p/HNWT6DgoBc1692QWn5trsGLxi44TrGuNZJMEdibBBbUKuho3EaW43JV4QzaQ258PEGNV2u43KAhU8r3Vjno4cBP8JeTFkbS2SCMjZZPprKzfMSdteRxSZxuPku4.png?format=match&mode=fit&width=600&height=500"
          />
        </picture>
      </a>
    </div>
    <div
      className="item-summary"
    >
      <a
        className="item-title"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Awesome Hive
      </a>
      <a
        className="item-body"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Hey developers, I just created Awesome-Hive, list of services and apps on Hive. If you don't know about Awesome project, take a look at here: Project contains list of services and links to various tools
      </a>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="entry-payout notranslate"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        $ 125.10
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="10 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          10
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="31 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          31
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      />
    </div>
  </div>
</div>
`;

exports[`(2) Grid view 1`] = `
<div
  className="entry-list-item hot"
  id="good-karmaawesome-hive"
>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="good-karma-awesome-hive"
      >
        <div
          className="d-flex align-items-center"
          id="good-karma-awesome-hive"
        >
          <a
            href="/@good-karma"
            onClick={[Function]}
          >
            <span
              className="author-avatar d-block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate d-flex d-sm-none align-items-center"
            id="good-karma-awesome-hive"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              good-karma
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="good-karma-awesome-hive"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate d-none d-sm-flex align-items-center position-relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                good-karma
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/hot/hive"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        hive
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Monday, June 1, 2020 5:53 AM"
      >
        5d
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image "
    >
      <a
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <img
          alt="Awesome Hive"
          onError={[Function]}
          src="https://images.ecency.com/p/HNWT6DgoBc1692QWn5trsGLxi44TrGuNZJMEdibBBbUKuho3EaW43JV4QzaQ258PEGNV2u43KAhU8r3Vjno4cBP8JeTFkbS2SCMjZZPprKzfMSdteRxSZxuPku4.png?format=match&mode=fit&width=600&height=500"
          style={
            Object {
              "width": "auto",
            }
          }
        />
      </a>
    </div>
    <div
      className="item-summary"
    >
      <a
        className="item-title"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Awesome Hive
      </a>
      <a
        className="item-body"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Hey developers, I just created Awesome-Hive, list of services and apps on Hive. If you don't know about Awesome project, take a look at here: Project contains list of services and links to various tools
      </a>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="entry-payout notranslate"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        $ 125.10
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="10 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          10
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="31 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          31
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      />
    </div>
  </div>
</div>
`;

exports[`(3) Nsfw 1`] = `
<div
  className="entry-list-item hot"
  id="good-karmaawesome-hive"
>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="good-karma-awesome-hive"
      >
        <div
          className="d-flex align-items-center"
          id="good-karma-awesome-hive"
        >
          <a
            href="/@good-karma"
            onClick={[Function]}
          >
            <span
              className="author-avatar d-block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate d-flex d-sm-none align-items-center"
            id="good-karma-awesome-hive"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              good-karma
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="good-karma-awesome-hive"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate d-none d-sm-flex align-items-center position-relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                good-karma
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/hot/hive"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        hive
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Monday, June 1, 2020 5:53 AM"
      >
        5d
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image item-image-nsfw"
    >
      <img
        alt="Awesome Hive"
        src="nsfw.png"
      />
    </div>
    <div
      className="item-summary"
    >
      <div
        className="item-nsfw"
      >
        <span
          className="nsfw-badge"
        >
          NSFW
        </span>
      </div>
      <div
        className="item-nsfw-options"
      >
        <a
          href="#"
          onClick={[Function]}
        >
          Reveal this post
        </a>
         
        or
         
        <span
          dangerouslySetInnerHTML={
            Object {
              "__html": "<a href=\\"/signup\\" class=\\"push-link\\">create an account</a> to save your preferences",
            }
          }
        />
        .
      </div>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="entry-payout notranslate"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        $ 125.10
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="10 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          10
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="31 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          31
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      />
    </div>
  </div>
</div>
`;

exports[`(4) Nsfw with active user 1`] = `
<div
  className="entry-list-item hot"
  id="good-karmaawesome-hive"
>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="good-karma-awesome-hive"
      >
        <div
          className="d-flex align-items-center"
          id="good-karma-awesome-hive"
        >
          <a
            href="/@good-karma"
            onClick={[Function]}
          >
            <span
              className="author-avatar d-block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate d-flex d-sm-none align-items-center"
            id="good-karma-awesome-hive"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              good-karma
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="good-karma-awesome-hive"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate d-none d-sm-flex align-items-center position-relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                good-karma
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/hot/hive"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        hive
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Monday, June 1, 2020 5:53 AM"
      >
        5d
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image item-image-nsfw"
    >
      <img
        alt="Awesome Hive"
        src="nsfw.png"
      />
    </div>
    <div
      className="item-summary"
    >
      <div
        className="item-nsfw"
      >
        <span
          className="nsfw-badge"
        >
          NSFW
        </span>
      </div>
      <div
        className="item-nsfw-options"
      >
        <a
          href="#"
          onClick={[Function]}
        >
          Reveal this post
        </a>
         
        or
         
        adjust your
         
        <a
          href="#"
          onClick={[Function]}
        >
          display preferences
        </a>
        .
      </div>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="entry-payout notranslate"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        $ 125.10
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="10 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          10
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="31 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          31
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      />
    </div>
  </div>
</div>
`;

exports[`(5) Nsfw but allowed 1`] = `
<div
  className="entry-list-item hot"
  id="good-karmaawesome-hive"
>
  <div
    className="item-header"
  >
    <div
      className="item-header-main"
    >
      <div
        className="author-part"
        id="good-karma-awesome-hive"
      >
        <div
          className="d-flex align-items-center"
          id="good-karma-awesome-hive"
        >
          <a
            href="/@good-karma"
            onClick={[Function]}
          >
            <span
              className="author-avatar d-block"
            >
              <span
                className="user-avatar small"
                onClick={[Function]}
                style={
                  Object {
                    "backgroundImage": "url(https://images.ecency.com/u/good-karma/avatar/small)",
                  }
                }
              />
            </span>
          </a>
          <div
            className="author btn notranslate d-flex d-sm-none align-items-center"
            id="good-karma-awesome-hive"
            onClick={[Function]}
          >
            <span
              className="author-name"
            >
              good-karma
            </span>
          </div>
          <span
            className="author-down-arrow mx-1"
            id="good-karma-awesome-hive"
            onClick={[Function]}
            role="button"
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
                fill="currentColor"
              />
            </svg>
          </span>
          <div
            onMouseLeave={[Function]}
          >
            <div
              className="author btn notranslate d-none d-sm-flex align-items-center position-relative"
              onMouseEnter={[Function]}
            >
              <span
                className="author-name"
              >
                good-karma
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        className="category"
        href="/hot/hive"
        onClick={[Function]}
        title="Unmoderated topics"
      >
        hive
      </a>
      <span
        className="read-mark"
      />
      <span
        className="date"
        title="Monday, June 1, 2020 5:53 AM"
      >
        5d
      </span>
    </div>
    <div
      className="item-header-features"
    />
  </div>
  <div
    className="item-body"
  >
    <div
      className="item-image "
    >
      <a
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <picture>
          <source
            media="(min-width: 576px)"
            srcSet="https://images.ecency.com/p/HNWT6DgoBc1692QWn5trsGLxi44TrGuNZJMEdibBBbUKuho3EaW43JV4QzaQ258PEGNV2u43KAhU8r3Vjno4cBP8JeTFkbS2SCMjZZPprKzfMSdteRxSZxuPku4.png?format=match&mode=fit&width=260&height=200"
          />
          <img
            alt="Awesome Hive"
            onError={[Function]}
            srcSet="https://images.ecency.com/p/HNWT6DgoBc1692QWn5trsGLxi44TrGuNZJMEdibBBbUKuho3EaW43JV4QzaQ258PEGNV2u43KAhU8r3Vjno4cBP8JeTFkbS2SCMjZZPprKzfMSdteRxSZxuPku4.png?format=match&mode=fit&width=600&height=500"
          />
        </picture>
      </a>
    </div>
    <div
      className="item-summary"
    >
      <a
        className="item-title"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Awesome Hive
      </a>
      <a
        className="item-body"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        Hey developers, I just created Awesome-Hive, list of services and apps on Hive. If you don't know about Awesome project, take a look at here: Project contains list of services and links to various tools
      </a>
    </div>
    <div
      className="item-controls"
    >
      <div
        onClick={[Function]}
      >
        <div>
          <div
            className="entry-vote-btn"
            onClick={[Function]}
          >
            <div
              className="btn-vote btn-up-vote"
            >
              <div
                className=""
              >
                <span
                  className="btn-inner "
                >
                  <svg
                    className="vote-svg"
                    viewBox="6 8 12 7.41"
                  >
                    <path
                      d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="entry-payout notranslate"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        $ 125.10
      </div>
      <div
        className="entry-votes notranslate"
      >
        <span
          className="inner-btn"
          onClick={[Function]}
          title="10 Votes"
        >
          <div
            className="heart-icon"
          >
            <svg
              fill="currentColor"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                fillRule="evenodd"
              />
            </svg>
          </div>
          10
        </span>
      </div>
      <a
        className="replies notranslate"
        href="/hive/@good-karma/awesome-hive"
        onClick={[Function]}
      >
        <span
          className="inner"
          title="31 responses. Click to respond."
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
              fill="currentColor"
            />
          </svg>
           
          31
        </span>
      </a>
      <div
        className="entry-reblog-btn"
        onClick={[Function]}
      >
        <a
          className="inner-btn"
          title="Reblog"
        >
          <svg
            viewBox="0 0 24 24"
          >
            <path
              d="M17,17H7V14L3,18L7,22V19H19V13H17M7,7H17V10L21,6L17,2V5H5V11H7V7Z"
              fill="currentColor"
            />
          </svg>
        </a>
      </div>
      <div
        className="entry-menu"
      />
    </div>
  </div>
</div>
`;
